--- a/JavaScript/Ajax/practice/index.html
+++ b/JavaScript/Ajax/practice/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src='script.js'></script>
 </head>
 <body>
-    <input type='button' id='listButton' value='리스트출력' />
+    <button id='listButton'>리스트 출력</button>
     <br/>
     <div id='listDiv'></div>
 </body>
