--- a/JavaScript/Ajax/practice/index.html
+++ b/JavaScript/Ajax/practice/index.html
@@ -10,6 +10,7 @@
 <body>
     <button id='listButton'>리스트 출력</button>
     <br/>
-    <div id='listDiv'></div>
+    <div id='listDiv'>
+    </div>
 </body>
 </html>
