--- a/JavaScript/VanillaJS/maplestory/tag.html
+++ b/JavaScript/VanillaJS/maplestory/tag.html
@@ -24,53 +24,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
-<script>
-// /* JavaScript markdown editor SimpleMDE */
-// var simplemde = new SimpleMDE({ element: document.getElementById("MyID") });
-
-
-/* add Tag by click or press enter */
-var elements = document.getElementById('element');
-var taskSubmit = document.getElementById('btn_add_task');
-var taskBox = document.getElementById('text_task');
-var taskList = document.getElementById('list_tasks');
-
-
-document.addEventListener('keydown', function(e) {
-    var task = taskBox.value.trim();
-    var newLI = document.createElement('li');
-    var removeBtn = document.createElement('button');
-    var element = newLI.appendChild(document.createTextNode(task));
-    if ((taskBox.value != "") && (e.keyCode === 188 || e.keyCode === 13 || e.keyCode === 32))  {
-        e.preventDefault();
-        taskList.appendChild(newLI);
-        taskList.appendChild(removeBtn);
-        taskBox.value = '';
-        removeBtn.addEventListener('click', function() {
-            removeBtn.parentNode.removeChild(removeBtn);
-            newLI.parentNode.removeChild(newLI);
-        });
-    }
-}, false);
-document.addEventListener('click', function(e) {
-    var task = taskBox.value.trim();
-    var newLI = document.createElement('li');
-    var removeBtn = document.createElement('button');
-    removeBtn.innerHTML = "❌";
-    var element = newLI.appendChild(document.createTextNode(task));
-    if ((taskBox.value != "") && (e.keyCode === 188 || e.keyCode === 13 || e.keyCode === 32))  {
-        e.preventDefault();
-        taskList.appendChild(newLI);
-        taskList.appendChild(removeBtn);
-        taskBox.value = '';
-        removeBtn.addEventListener('click', function() {
-            removeBtn.parentNode.removeChild(removeBtn);
-            newLI.parentNode.removeChild(newLI);
-        });
-    }
-}, false);
-$('#list_tasks').on('')
-</script>
+<script src='js/tag.js'></script>
 </html>
 
 <!-- 
