--- a/JavaScript/React/example/practice.html
+++ b/JavaScript/React/example/practice.html
@@ -12,11 +12,69 @@
   <body>
     <div id="root"></div>
     <script type="text/babel">
+      function formatName(user) {
+        return user.firstName + ' ' + user.lastName;
+      }
+//      JSX를 if 구문 및 for loop 안에 사용하고, 변수에 할당하고, 인자로서 받아들이고, 함수로부터 반환할 수 있다.
+//      function getGreeting(user) {
+//        if (user) {
+//          return <h1>Hello, {formatName(user)}!</h1>;
+//        }
+//        return <h1>Hello, Stranger.</h1>;
+//      }
 
+      const user = {
+        firstName : 'steadily',
+        lastName : 'worked'
+      };
+
+      const element = (
+        <h1>
+          Hello, {formatName(user)}!
+        </h1>
+      )
       ReactDOM.render(
-        <h1>Hello, world!</h1>,
+        element,
         document.getElementById('root')
       );
+//    JSX 속성 정의 : 속성에 따옴표를 이용해 문자열 리터럴을 정의할 수 있다.
+//    const element = <div tabIndex = '0'></div>;
+//    중괄호를 사용하여 어트리뷰트에 JavaScript 표현식을 삽입할 수도 있다.
+//    const element = <img src={user.avatarUrl}></img>;
+//    JSX 태그는 자식을 포함할 수 있다:
+//    const element = (
+//      <div>
+//        <h1>Hello!</h1>
+//        <h2>Good to see you here.</h2>
+//      </div>
+//    )
+
+//    JSX는 객체를 표현합니다 : Babel은 JSX를 React.createElement() 호출로 컴파일한다.
+//    다음 두 예시는 동일하다:
+//    const element = (
+//      <h1 className = "greeting">
+//        Hello, world!
+//      </h1>
+//    );
+
+//    const element = React.createElement(
+//      'h1',
+//      {className: "greeting"},
+//      'Hello, world!'
+//    );
+
+//    위와 같은 React.createElement()는 버그가 없는 코드를 작성하는 데 도움이 되도록 몇 가지 검사를 수행하며,
+//    기본적으로 다음과 같은 객체를 생성한다. (아래 구조는 단순화되었음)
+//    const element = {
+//      type: 'h1',
+//      props: {
+//        className: "greeting",
+//        children : 'Hello, world!'
+//      }
+//    };
+      
+//    이러한 객체를 "React 엘리먼트"라고 하며, 이를 화면에 표시하려는 항목에 대한 설명으로 생각할 수 있다.
+//    React는 이러한 객체를 읽은 후 DOM을 구성하고 최신으로 유지하는 데 이러한 객체를 사용한다.
 
     </script>
     <!--
