--- a/JavaScript/React/example/practice.html
+++ b/JavaScript/React/example/practice.html
@@ -37,6 +37,19 @@
         element,
         document.getElementById('root')
       );
+
+      function tick() {
+  const element = (
+    <div>
+      <h1>Hello, world!</h1>
+      <h2>It is {new Date().toLocaleTimeString()}.</h2>
+    </div>
+  );
+  ReactDOM.render(element, document.getElementById('root'));
+}
+
+setInterval(tick, 1000);
+
 //    JSX 속성 정의 : 속성에 따옴표를 이용해 문자열 리터럴을 정의할 수 있다.
 //    const element = <div tabIndex = '0'></div>;
 //    중괄호를 사용하여 어트리뷰트에 JavaScript 표현식을 삽입할 수도 있다.
