finish preventing input other than languages and numbers

--- a/JavaScript/VanillaJS/maplestory/tag.html
+++ b/JavaScript/VanillaJS/maplestory/tag.html
@@ -16,7 +16,8 @@
     autocomplete="off"
     class="form-control"
     placeholder="태그 목록"
-    id="text_task">
+    id="text_task"
+    noSpecial />
     <button type="submit" id="btn_add_task" class="btn btn-primary">추가</button>
    </form>           
    <ul id = "list_tasks"></ul>
