--- a/JavaScript/VanillaJS/maplestory/tag.html
+++ b/JavaScript/VanillaJS/maplestory/tag.html
@@ -7,34 +7,30 @@
     <link href="css/styles.css" rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <!-- <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script> -->
-
-</head>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  
+  </head>
 <body>
     <!-- <textarea id='MyID'></textarea> -->
-    <form>
+    <div id='ui-widget'>
     <input type="text"
-    autocomplete="off"
     class="form-control"
     placeholder="태그 목록"
     id="text_task"
-    noSpecial />
-    <button type="submit" id="btn_add_task" class="btn btn-primary">추가</button>
-   </form>           
+    />
+    <!-- <button type="submit" id="btn_add_task" class="btn btn-primary">추가</button> -->
+   </div>
    <ul id = "list_tasks"></ul>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
 <script src='js/tag.js'></script>
 </html>
 
 <!-- 
 // 똑같은 태그가 추가되면 안됨
-// , 이용해서도 추가되게 하기 (OK)
-// // 자동완성
+// , 이용해서도 추가되게 하기 -> 해결
+// 자동완성 -> 대충 OK. 스타일 등은 더 만져봐야 함.
 
-// 콤마만 있을 때 콤마가 출력이 됨 (문제) -->
-
-
-
-
+// 콤마만 있을 때 콤마가 출력이 됨 (문제) -> 해결
