--- a/JavaScript/VanillaJS/maplestory/tag.html
+++ b/JavaScript/VanillaJS/maplestory/tag.html
@@ -21,7 +21,7 @@
     placeholder="태그 목록"
     id="text_task"
     />
-    <!-- <button type="submit" id="btn_add_task" class="btn btn-primary">추가</button> -->
+    <button type="submit" id="btn_add_task" class="btn btn-primary">추가</button>
    </div>
    <ul id = "list_tasks"></ul>
 </body>
